[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"

tokio = { version = "1", features = ["full"] }
axum = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

hex = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

rusqlite = { version = "0.31", features = ["bundled"] }
