[package]
name = "control"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rusqlite = { version = "0.31", features = ["bundled"] }
hex = "0.4"
sha2 = "0.10"
