[package]
name = "control"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = { version = "0.7", features = ["ws"] }

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

rusqlite = { version = "0.31", features = ["bundled"] }

reqwest = { version = "0.11", default-features = false, features = ["json","rustls-tls"] }

chrono = "0.4"
sha2 = "0.10"

futures-util = "0.3"
